CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE Release)

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

SET(BOOST_ROOT /path/to/boost_1_59_0)
FIND_PACKAGE(Boost REQUIRED)

FIND_PACKAGE(Threads REQUIRED)

FIND_LIBRARY(BENCHMARK_LIB NAMES benchmark)

ADD_EXECUTABLE(freelist freelist.cc)
TARGET_COMPILE_OPTIONS(freelist PRIVATE -fno-exceptions -Wall -Wextra -Werror -pedantic -pedantic-errors -std=c++14)
TARGET_LINK_LIBRARIES(freelist ${BENCHMARK_LIB})

